--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ryan Kotzen <potz666@gmail.com> (http://blog.exigentcoder.com)",
   "license": "MIT",
   "dependencies": {
+    "async": "2.5.0",
     "feathers": "2.1.7",
     "feathers-nedb": "2.6.2",
     "nedb": "1.8.0"
