--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "feathers-hooks-common": "3.7.1",
     "feathers-nedb": "2.6.2",
     "nedb": "1.8.0"
+  },
+  "devDependencies": {
+    "eslint": "4.4.1",
+    "eslint-config-prettier": "2.3.0",
+    "eslint-plugin-node": "5.1.1",
+    "eslint-plugin-prettier": "2.1.2",
+    "prettier": "1.5.3"
   }
 }
