--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning feathers",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"src/**/*.js\" --fix"
   },
   "keywords": [
     "feathers"
